# sdp-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: candidate.h  capability.h  codecinfo.h  direction.h  directionway.h  dtlsinfo.h  iceinfo.h  jsonserialize.h  mediainfo.h  ridinfo.h  rtcpfeedbackinfo.h  sdpinfo.h  sdptransform.h  setup.h  simulcastinfo.h  simulcaststreaminfo.h  sourcegroupinfo.h  sourceinfo.h  streaminfo.h  stringUtil.h  trackencodinginfo.h  trackinfo.h  utils.h
src/: grammar.cpp  parser.cpp  sdpinfo.cpp  writer.cpp
